--- a/src/assets/scss/ThemeVariables.scss
+++ b/src/assets/scss/ThemeVariables.scss
@@ -8,7 +8,7 @@ $primary: $ORKG-primary-color;
 $darkblue: #80869b;
 $darkblueDarker: darken($darkblue, 20%);
 //$secondary: #3C4C58;
-$light: #e6e6e6;
+$light: #e9ecef;
 $ultra-light-blue: #f8f9fb;
 $ultra-light-blue-darker: #dbdde5;
 $body-bg: #e9ebf2;
